--- a/contato.html
+++ b/contato.html
@@ -5,45 +5,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
+    <link rel="stylesheet" href="assets/img/css/style.css">
+
 </head>
 <body>
-    <ul>
-        <li>
-            <a href="index.html"> Home</a>
-        </li>
-        <li>
-            <a href="contato.html"> Contato</a>
-        </li>
-    </ul>
+    <nav>
+        <ul class="menu">
+            <a href="index.html">
+                <li>Home</li>
+            </a>
+            <a href="contato.html">
+                </li>Contato</li>
+            </a>
+        </ul>
+    </nav>
+
     <h1>Entre em contato comigo</h1>
 
-    <form>
-        <label for="nome">Nome:</label><br>
-        <input type="text" id="nome">
-<br>
-<br>
-        <label for="email">E-mail:</label><br>
-        <input type="email" id="email">
-<br>
-<br>
-        <label for="assunto">Assunto:</label><br>
-        <textarea name="assunto" id="assunto" cols="30" rows="5"></textarea><br>
-<br>
-<br>
-        <button>Enviar</button>
-    </form>
+    <div class="container">
 
-    <h2>Endereço:</h2>
-    <p>Av. Paulista, 1050</p>
-    <p>São Paulo - SP</p>
+        <div>
+            <form>
+                <label for="nome">Nome:</label><br>
+                <input type="text" id="nome">
+        <br>
+        <br>
+                <label for="email">E-mail:</label><br>
+                <input type="email" id="email">
+        <br>
+        <br>
+                <label for="assunto">Assunto:</label><br>
+                <textarea name="assunto" id="assunto" cols="30" rows="5"></textarea><br>
+        <br>
+        <br>
+                <button>Enviar</button>
+            </form>
 
-    <iframe 
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14628.418980511053!2d-46.66106877336683!3d-23.564681254897927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c7e9e9a163%3A0xf9c4c21e96fdcda8!2sAv.%20Paulista%2C%201050%20-%20Bela%20Vista%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001310-100!5e0!3m2!1spt-BR!2sbr!4v1655833485326!5m2!1spt-BR!2sbr" 
-    width="400" 
-    height="250" 
-    style="border:0;" 
-    allowfullscreen="" 
-    loading="lazy" 
-    referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
+        <div class="ml-50">
+        <h2>Endereço:</h2>
+        <p>Av. Paulista, 1050</p>
+        <p>São Paulo - SP</p>
+    
+        <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14628.418980511053!2d-46.66106877336683!3d-23.564681254897927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c7e9e9a163%3A0xf9c4c21e96fdcda8!2sAv.%20Paulista%2C%201050%20-%20Bela%20Vista%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001310-100!5e0!3m2!1spt-BR!2sbr!4v1655833485326!5m2!1spt-BR!2sbr" 
+        width="400" 
+        height="250" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
+    </div>
+
+    
+
+<footer class="rodape">
+
+    <div>
+        <a href="https://www.linkedin.com/" target="_blank">
+        <img class="tm p30" src="assets/img/linkedin.png" alt="logo do linkedin">
+    </a>
+    <a href="https://github.com/" target="_blank">
+        <img class="tm p30" src="assets/img/github.png" alt="logo do github">
+    </a>
+    </div>
+
+    Todos os direitos reservados à Allan Baad - &copy
+
+</footer>
+
 </body>
 </html>
