Implemetação de JavaScript para validar inputs

--- a/contato.html
+++ b/contato.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
-    <link rel="stylesheet" href="assets/img/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 <body>
@@ -27,18 +27,18 @@
         <div>
             <form>
                 <label for="nome">Nome:</label><br>
-                <input type="text" id="nome">
-        <br>
+                <input type="text" id="nome" onkeyup="validaNome()">
+        <div id="txtNome"> </div>
         <br>
                 <label for="email">E-mail:</label><br>
-                <input type="email" id="email">
-        <br>
+                <input type="email" id="email" onkeyup="validaEmail()">
+        <div id="txtEmail"> </div>
         <br>
                 <label for="assunto">Assunto:</label><br>
-                <textarea name="assunto" id="assunto" cols="30" rows="5"></textarea><br>
+                <textarea name="assunto" id="assunto" cols="30" rows="5" onkeyup="validaAssunto()"></textarea><br>
+        <div id="txtAssunto"> </div>
         <br>
-        <br>
-                <button>Enviar</button>
+                <button onclick="enviar()">Enviar</button>
             </form>
 
         </div>
@@ -55,7 +55,7 @@
         style="border:0;" 
         allowfullscreen="" 
         loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
+        referrerpolicy="no-referrer-when-downgrade" onmousemove="mapaZoom()" onmouseout="mapaNormal()" id="mapa"></iframe>
         </div>
 
     </div>
@@ -77,5 +77,6 @@
 
 </footer>
 
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
